--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section id="view-splash">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-8 col-xs-push-2">
+          <div class="col-xs-10 col-xs-push-1">
             <p id="logo">Foodmap</p>
           </div>
         </div>
@@ -25,25 +25,32 @@
     <section id="second-section">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-8 col-xs-push-2">
-            <h1 class="logo-1">Foodmap</h1>
+          <div class="col-xs-10 col-xs-push-1">
+            <h1 id="logo-1">Foodmap</h1>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-10 col-xs-push-1">
+          <div class="col-xs-10">
             <hr>
           <!-- Mapa Google -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d30107.8087350549!2d-99.1400809!3d19.391824999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1516473507799" width="100%" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-            <h2 >Comida cerca de ti</h2>
+          <div id="map">
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA45Izcz08BVBqeZPyg7WKdmoj7sIPZgHg&libraries=places&callback=initMap" async defer></script>
+          </div>
+            <h2>Comida cerca de ti</h2>
           </div>
           <!--Input Busqueda -->
           <div class="row">
-            <div class="col-xs-8 col-xs-push-2">
+            <div class="col-xs-9 col-xs-push-1">
               <div class="input-group">
                 <input type="text" class="form-control" placeholder="Busca tu antojo">
               <div class="input-group-btn">
-                <button type="button" class="btn btn-default" ><i class="fa fa-search" aria-hidden="true"></i> </button>
+                <button type="button" class="btn btn-default"><i class="fa fa-search" aria-hidden="true"></i> </button>
               </div>
+              </div>
+              <div id="right-panel">
+                <h2>Results</h2>
+                <ul id="places"></ul>
+                <button id="more">More results</button>
               </div>
             </div><!--Termina input Busqueda -->
           </div>
